k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: backend-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend: 
              service:
                name: backend
                port:
                  number: 8000
